[gd_scene load_steps=6 format=3 uid="uid://cjw566s1p6d14"]

[ext_resource type="Texture2D" uid="uid://dp0uwqsv72oo7" path="res://Assets/MainMenu/MainMenu.png" id="1_6ebhc"]
[ext_resource type="Script" path="res://Scripts/title_screen.gd" id="1_pnk5d"]
[ext_resource type="Texture2D" uid="uid://c7kt4n44dxfnf" path="res://Assets/MainMenu/Buttons.png" id="4_6rpye"]
[ext_resource type="PackedScene" uid="uid://smk6r6ygbleh" path="res://Scenes/ConfigPanel.tscn" id="5_pymfm"]
[ext_resource type="AudioStream" uid="uid://bxx6my6krp8pu" path="res://Assets/Sounds/Music/AudioMain.mp3" id="11_o4foo"]

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_pnk5d")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="Sprite2D" parent="Control"]
position = Vector2(959.5, 539.5)
scale = Vector2(7.50391, 7.52083)
texture = ExtResource("1_6ebhc")

[node name="Timer" type="Timer" parent="."]

[node name="AudioTitle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_o4foo")
volume_db = 2.0
autoplay = true
parameters/looping = true

[node name="Buttons" type="Sprite2D" parent="."]
position = Vector2(216, 420)
scale = Vector2(7.72727, 7.72727)
texture = ExtResource("4_6rpye")
centered = false
hframes = 2

[node name="ButtonSelected" type="Sprite2D" parent="Buttons"]
texture = ExtResource("4_6rpye")
centered = false
hframes = 2
vframes = 5

[node name="ConfigPanel" parent="." node_paths=PackedStringArray("background_music") instance=ExtResource("5_pymfm")]
visible = false
background_music = NodePath("../AudioTitle")

[connection signal="closed" from="ConfigPanel" to="." method="_on_config_panel_closed"]
